syntax = "proto3";

package myapp;

service UserService {
  rpc ListUsers(DummyRequest) returns (stream DummyResponse);
  rpc CreateUser(DummyRequest) returns (DummyResponse);
}

message DummyRequest {}

message DummyResponse {}
